# FastFlowLM

./: README.md  bench_config.json
.github/workflows/: build-container.yml  ubuntu-build.yml  windows-build.yml
debian/: rules
docs/: CNAME  _config.yml  index.md  install.md  news.md  team.md
docs/benchmarks/: gemma3_results.md  gpt-oss_results.md  lfm2:1.2b_results.md  llama3_results.md  qwen3_results.md
docs/docs/benchmarks/: gemma3_results.md  gpt-oss_results.md  index.md  qwen2.5_results.md  qwen3.5_results.md  qwen3_results.md
docs/docs/models/: qwen.md
docs/instructions/: cli.md  index.md
docs/instructions/server/: index.md  openapi.md  websearch_LangChain.md  webui.md
docs/models/: embeddinggemma.md  gpt-oss.md  whisper.md
src/: CMakeLists.txt  CMakePresets.json  Makefile  README.md  model_list.json
src/common/AutoEmbeddingModel/: auto_embedding_model.cpp  modeling_gemma_embedding.cpp
src/common/AutoModel/: automodel.cpp  modeling_gemma3.cpp  modeling_gemma3_image.cpp  modeling_gemma3_text.cpp  modeling_gpt_oss.cpp  modeling_lfm2.cpp  modeling_llama3.cpp  modeling_qwen2.cpp  modeling_qwen2vl.cpp  modeling_qwen2vl_image.cpp  modeling_qwen3.cpp  modeling_qwen3_5vl.cpp  modeling_qwen3vl.cpp  modeling_qwen3vl_image.cpp
src/common/image/: image_reader.cpp
src/common/image_process_utils/: imageproc.cpp  imageprocAVX512.cpp
src/common/modules/: sampler.cpp
src/common/npu_utils/: npu_instr_utils.cpp
src/common/tokenizer/: tokenizer.cpp
src/common/whisper/: modeling_whisper.cpp  modeling_whisper_audio.cpp
src/include/: biovault_bfloat16.h  buffer.hpp  embedding_model.hpp  harmony_filter.hpp  lm_config.hpp  metrices.hpp  model_list.hpp  tensor_2d.hpp  typedef.hpp  update.hpp  wstream_buf.hpp
src/include/AutoEmbeddingModel/: all_embedding_model.hpp  auto_embedding_model.hpp  modeling_gemma_embedding.hpp
src/include/AutoModel/: all_models.hpp  automodel.hpp  modeling_gemma3.hpp  modeling_gemma3_text.hpp  modeling_gpt_oss.hpp  modeling_lfm2.hpp  modeling_llama3.hpp  modeling_qwen2vl.hpp  modeling_qwen3.hpp  modeling_qwen3vl.hpp
src/include/gemma/: gemma_npu.hpp  gemma_npu_sequence.hpp
src/include/gemma_embedding/: gemma_embedding.hpp
src/include/gemma_text/: gemma_text_dequant.hpp  gemma_text_gemm.hpp  gemma_text_lm_head.hpp
src/include/image/: image_reader.hpp
src/include/image_process_utils/: imageproc.hpp  imageprocAVX512.hpp
src/include/llama/: llama_npu.hpp  llama_npu_sequence.hpp
src/include/modules/: dequant.hpp  embedding.hpp  gemm.hpp  lm_head.hpp  sampler.hpp
src/include/npu_utils/: npu_instr_utils.hpp  npu_utils.hpp
src/include/qwen/: qwen_npu.hpp  qwen_npu_sequence.hpp
src/include/tensor_utils/: q4_npu_eXpress.hpp  safe_tensors.hpp
src/include/tokenizer/: tokenizer.hpp
src/include/utils/: debug_utils.hpp  profiler.hpp  utils.hpp  vm_args.hpp
src/include/whisper/: language_table.hpp  modeling_whisper.hpp  whisper_npu.hpp
src/inno/: flm.iss
src/lib/: gemm.lib  gemma_embedding.lib  gemma_npu.lib  gemma_text_npu.lib  gpt_oss_npu.lib  lfm2_npu.lib  libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib  llama_npu.lib  lm_head.lib  npu_utils.lib  qwen2vl_npu.lib  qwen3_5vl_npu.lib  qwen3vl_npu.lib  qwen_npu.lib  whisper_npu.lib
src/pull/: download_model.cpp  download_model.hpp  model_downloader.cpp  model_downloader.hpp
src/runner/: cli_wide.cpp  cli_wide.hpp  runner.cpp  runner.hpp
src/server/: multipart.cpp  multipart.hpp  rest_handler.cpp  rest_handler.hpp  server.cpp  server.hpp  streaming_ostream.hpp  streaming_ostream_openai.hpp
src/src/: benchmarking.hpp  main.cpp
src/test/: common.mk
src/test/gemma_embedding/: CMakeLists.txt  Makefile  test.cpp
src/test/gemma_npu/: CMakeLists.txt  Makefile  test.cpp
src/test/gemma_text_npu/: CMakeLists.txt  Makefile
src/test/gpt_oss_npu/: CMakeLists.txt  Makefile  test.cpp
src/test/image_preprocess/: CMakeLists.txt  Makefile  test.cpp
src/test/lfm2_npu/: .Makefile.un~  CMakeLists.txt  Makefile  Makefile~  test.cpp
src/test/llama_npu/: CMakeLists.txt  Makefile  test.cpp
src/test/lm_head/: CMakeLists.txt  Makefile  test.cpp
src/test/phi4_npu/: CMakeLists.txt  Makefile  test.cpp
src/test/q4nx/: CMakeLists.txt  Makefile  test.cpp
src/test/qwen2_npu/: CMakeLists.txt  (+2 more)
(+17 files in other folders)
